# uspevatel

./: .gitignore  App.tsx  CLAUDE.md  app.json  babel.config.js  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
android/app/: build.gradle
desktop/: index.html  package-lock.json  package.json  tsconfig.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
scripts/: db-pull.sh  db-push.sh
src/: changelog.ts
src/components/: AttachmentList.tsx  DatePickerField.tsx  FilterBar.tsx  PolishTextButton.tsx  ProgressRing.tsx  QuickAddBar.tsx  QuickAddModal.tsx  RoutineStep.tsx  SearchBar.tsx  StatsChart.tsx  SwipeableTask.tsx  SyncConflictModal.tsx  TaskCard.tsx  TelegramSync.tsx  TimePickerField.tsx  VoiceCommandButton.tsx  VoiceInputButton.tsx  ZoomableImage.tsx
src/db/: database.ts  exerciseImages.ts  foodCatalog.ts  healthPresets.ts  migrate.ts  seed.ts
src/navigation/: index.tsx
src/screens/: AddTaskScreen.tsx  AllScreen.tsx  CheckScreen.tsx  ContactDetailScreen.tsx  ContactsScreen.tsx  ControlScreen.tsx  DailyRoutineScreen.tsx  DayReviewScreen.tsx  DayScreen.tsx  DocumentsScreen.tsx  ExerciseDetailScreen.tsx  ExercisesScreen.tsx  HealthScreen.tsx  InboxScreen.tsx  LaterScreen.tsx  MaybeScreen.tsx  MoneyScreen.tsx  NutritionScreen.tsx  PlannerTab.tsx  ProjectDetailScreen.tsx  ProjectsScreen.tsx  RoutineScreen.tsx  SettingsScreen.tsx  SportScreen.tsx  StatsScreen.tsx  (+5 more)
(+119 files in other folders)
