[package]
name = "uspevatel-desktop"
version = "1.0.0"
description = "Успеватель Desktop App"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
