[package]
name = "uspevatel-desktop"
version = "1.0.0"
description = "Успеватель Desktop App"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
