[package]
name = "uspevatel-desktop"
version = "1.0.0"
description = "Desktop companion for Uspevatel"
authors = ["Uspevatel"]
edition = "2021"

[lib]
name = "uspevatel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "~2.10.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "~2.6.0"
tauri-plugin-sql = { version = "~2.3.0", features = ["sqlite"] }
